# openconnect

./: .babelrc  .env.example  .env.production  .eslintrc.js  .gitignore  .lintstagedrc.json  .vercelignore  AGENCY_DEPLOYMENT.md  DEPLOYMENT.md  README.md  branches_to_delete.txt  cleanup_branches.sh  cleanup_vercel_deployments.sh  component_todo_list.md  docker-compose.livekit.yml  docker-compose.yml  jest.config.ts  neon_auth_instructions.sh  neon_branch_cleanup.sh  neon_branch_cleanup_guide.md  neon_branch_management.md  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  setup_vercel_env.sh  test_auth_flow.js  test_criteria.md  test_csrf_debug.js  test_csrf_token_fix.js  tsconfig.auth.json  tsconfig.json  vercel.json  vercel_branch_cleanup.md  vercel_branch_limit_fix_plan.md  vercel_branch_limit_resolution.md  vercel_branch_management_tutorial.md  vercel_deployment_fix.md
.storybook/: main.ts  preview.tsx
app/: config.py  database.py  main.py
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/core/: auth.py
backend/app/database/: config.py  schema.sql  seed.sql
backend/app/models/: base.py  contacts.py  facilities.py  users.py  video_calls.py
backend/app/providers/: livekit.py  twilio.py
backend/app/routers/: auth.py  calls.py  contacts.py  facilities.py  registration.py
backend/app/schemas/: contacts.py  facilities.py  registration.py  users.py
backend/tests/: conftest.py  test_calls.py  test_contacts.py  test_facilities.py  test_registration.py
docs/: HEAD.md  README.md  auth-configuration.md  auth-troubleshooting.md  neon-vercel-integration.md  project_overview.md
(+215 files in other folders)
