[tool.poetry]
name = "openconnect-backend"
version = "0.1.0"
description = "OpenConnect Backend API"
authors = ["Devin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.38"}
fastapi-users = {extras = ["sqlalchemy"], version = "^14.0.1"}
python-jose = {extras = ["cryptography"], version = "^3.4.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.20"
pydantic-settings = "^2.8.0"
pydantic = {extras = ["email"], version = "^2.10.6"}
alembic = "^1.14.1"
psycopg2-binary = "^2.9.10"
email-validator = "^2.2.0"
aiosqlite = "^0.21.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
httpx = "^0.28.1"
aiosqlite = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
