[tool.poetry]
name = "openconnect-backend"
version = "0.1.0"
description = "OpenConnect backend API"
authors = ["OpenHands <openhands@all-hands.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.0"
uvicorn = { extras = ["standard"], version = "^0.23.0" }
pydantic = "^2.0"
pydantic-settings = "^2.0"
SQLAlchemy = "^2.0"
requests = "^2.31.0"
livekit = "^0.2.5"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
